kubernetes/base/app/core/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-cost-advisor
  namespace: dev
  labels:
    app: cloud-cost-advisor
spec:
  selector:
    app: cloud-cost-advisor
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: metrics
      port: 8080
      targetPort: 8080
  type: ClusterIP
